--- a/src/app/features/crm/components/country/country.component.css
+++ b/src/app/features/crm/components/country/country.component.css
@@ -50,8 +50,14 @@ label {
     text-align: left;
 }
 
+::ng-deep .p-dropdown .p-dropdown-label {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
 ::ng-deep .p-dropdown .p-dropdown-filter {
-    height: 35px;
+    height: 30px;
 }
 
 .custom-table {
