VQ-756: Bug fixes

--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -22,7 +22,7 @@
             >
                 <ng-template pTemplate="header">
                     <tr>
-                        <th>ID</th>
+                        <!-- <th>ID</th> -->
                         <th>Name</th>
                         <th>Created By</th>
                         <th>Category</th>
@@ -33,7 +33,7 @@
                 </ng-template>
                 <ng-template pTemplate="body" let-report>
                     <tr>
-                        <td>{{ report.id }}</td>
+                        <!-- <td>{{ report.id }}</td> -->
                         <td>{{ report.name }}</td>
                         <td>
                             <!-- <ng-container *ngIf="getUserName(report.createdBy) | async as user">
