--- a/src/app/features/reports-v2/report-management/report-management.component.css
+++ b/src/app/features/reports-v2/report-management/report-management.component.css
@@ -1,5 +1,9 @@
+a.btn-link:hover {
+    background:#eee;
+}
+
 ul.dropdown-menu {
-    border: solid 1px #eee;
+    border: solid 1px #868E96;
     border-radius: 5px;
     padding: 0.5rem;
 }
