--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.css
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.css
@@ -15,3 +15,14 @@
   width: 100%;
   font-size: 13px;
 }
+.otpresendbtn {
+  font-size: 13px;
+  color: #01529A;
+  padding-left: 0;
+  cursor: pointer;
+  font-weight:bold;
+  text-decoration: none;
+  border: none;
+  background-color: white;
+  margin: 7% 34%;
+}
