VQ-756: reverted to previous commit

--- a/src/app/features/reports-v2/report-management/report-management.component.html
+++ b/src/app/features/reports-v2/report-management/report-management.component.html
@@ -1,3 +1,4 @@
+<!-- reverting to working commit  -->
 <div class="p-3">
     <div class="card p-3">
         
@@ -42,7 +43,7 @@
                             {{ report.createdBy }}
                         </td>
                         <td>
-                            <div class="btn-group dropend">
+                            <div class="btn-group dropdown">
                                 <a class="btn btn-link text-dark" data-bs-toggle="dropdown" aria-expanded="false">
                                     {{ getFolderCategoryName(report.folder) }}
                                 </a>
@@ -54,7 +55,7 @@
                         </td>
                         <td>{{ report.createdDate | date }}</td>
                         <td>
-                            <div class="btn-group dropend">
+                            <div class="btn-group dropdown">
                                 <a class="btn btn-link text-dark text-start" data-bs-toggle="dropdown" aria-expanded="false">
                                     {{ getDashboardName(report.dashboardId) }}
                                 </a>
@@ -69,12 +70,16 @@
                                 </ul>
                             </div>
                         </td>
-                        <td class="text-center">
-                            <div class="btn-group dropend">
+                        <td class="text-center">                              
+
+                            <div class="btn-group dropdown">
                                 <a class="btn btn-link text-dark" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="pi pi-ellipsis-v"></i>
                                 </a>
-                                <ul class="dropdown-menu">
+                                <!-- <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="test">
+                                    Dropend
+                                  </button> -->
+                                <ul class="dropdown-menu" aria-labelledby="test">
                                     <li (click)="gotoEditReport(report)">Edit</li>
                                     <li
                                     data-bs-toggle="modal"
