--- a/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
+++ b/src/app/features/lms/grp/components/quotation/components/coverage-details/coverage-details.component.css
@@ -63,6 +63,22 @@ a.routerLink.active .circle {
   margin-top: 10px;
 }
 
+.back-button {
+  display: inline-flex;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border: none;
+  background: transparent;
+  color: #00529B;
+  float: left;
+  margin-top: 10px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
 .custom-row {
   display: flex;
   flex-wrap: wrap;
@@ -95,13 +111,27 @@ a.routerLink.active .circle {
 }
 
 .edit-button {
-  color: green;
+  color: rgb(179, 244, 179);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.edit-button:hover {
+  color: rgb(106, 249, 106);
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
 .delete-button {
+  color: rgb(241, 148, 148);
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.delete-button:hover {
   color: red;
   background-color: transparent;
   border: none;
@@ -111,6 +141,57 @@ a.routerLink.active .circle {
   font-size: 15px;
 }
 
+.link {
+  text-decoration: underline;
+  cursor: pointer;
+  color: blue;
+}
+
+.link:hover {
+  color: darkblue;
+}
+
+.even-column {
+  background-color: #fefefe;
+}
+
+.odd-column {
+  background-color: rgb(250, 250, 250);
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+input[type="number"]::-webkit-inner-spin-button, 
+input[type="number"]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+.choose-file {
+  display: inline-flex;
+  height: 24px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #00529B;
+}
+
+.file-text {
+  color: #00529B;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+#tdStyle {
+  padding-left: 0.55rem;
+}
 @media (max-width: 820px) {
   .scrollable-container {
     flex-direction: column;
