--- a/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
+++ b/src/app/features/lms/grp/components/quotation/components/quick/quick.component.html
@@ -147,6 +147,7 @@
                             [showButtonBar]="true"
                             [style]="{ 'width': '83%' }"
                             placeholder="dd/mm/yy"
+                            [maxDate]="maxDate"
                             >
                 </p-calendar>
               </div>
@@ -201,7 +202,7 @@
       <div class="form-group col-md-4 col-lg-4 col-xs-12 col-sm-12">
           <div class="label"><label>Commission Rate</label></div>
           <div class="form-group mx-2">
-              <input type="text"
+              <input type="number"
                          pInputText
                          class="form-control"
                           id='commissionRate'
@@ -221,4 +222,13 @@
       >Continue
       </button>
     </div>
+    <ngx-spinner
+      name="download_view"
+        type="ball-clip-rotate-multiple"
+
+        [fullScreen]="true"
+        color="#00529B"
+        size="medium"
+        bdColor="rgba(255, 255, 255, 0.9)"
+      ></ngx-spinner>
 </div>
