--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -40,7 +40,7 @@
 
 <div  class="d-flex my-4 mx-4">
   <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>
-  <button class="btn btn-primary" (click)="processReassignTask()" id="btn-reassign-task">Reassign</button>
+  <button class="btn btn-primary border-radius-none" (click)="processReassignTask()" id="btn-reassign-task">Reassign</button>
 </div>
 
 <div class="d-flex my-4 mx-4">
@@ -281,40 +281,3 @@
   (actionReassignEmitter)="handleAction($event)"
   (reassignedTickets)="reassignSubmitted($event)">
 </app-reassign-ticket-modal>
-
-<!-- Authorize Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" aria-labelledby="exampleModal1Label" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered modal-sm">
-    <div class="modal-content">
-      <div class="modal-header border-bottom-0">
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()"></button>
-      </div>
-      <div class="modal-body">
-        <form [formGroup]="form">
-          <div class="col-12">
-            <div class="row justify-content-center">
-              <div class="form-group col-sm-2" *ngFor="let input of formInput;  index as i">
-                <input id="keyUpEvent"
-                       #formRow
-                       type="text"
-                       formControlName="{{input}}"
-                       class="form-control" maxlength="1"
-                       (keyup)="keyUpEvent($event, i)"
-                       style="width:35px"
-                >
-              </div>
-              <div *ngIf="submitted && form.invalid" class="invalid-feedback">
-                <div>OTP value is required</div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 mt-3">
-            <button id="onVerify" type="button" class="btn btn-primary w-100" (click)="verifyAuthorizeOtp()">Authorize</button>
-            <button type="button" class="otpresendbtn" (click)="generateAuthorizeOtp()">Resend Code</button>
-          </div>
-
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
